add section work

--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
 			<path fill-rule="evenodd"   fill="rgb(255, 255, 255)"
 			d="M45.996,92.003 C20.633,92.003 -0.004,71.366 -0.004,46.003 C-0.004,20.638 20.633,0.003 45.996,0.003 C71.361,0.003 91.996,20.638 91.996,46.003 C91.996,71.366 71.361,92.003 45.996,92.003 ZM45.996,3.123 C22.353,3.123 3.115,22.360 3.115,46.003 C3.115,69.648 22.353,88.884 45.996,88.884 C69.641,88.884 88.876,69.648 88.876,46.003 C88.876,22.360 69.641,3.123 45.996,3.123 ZM47.763,56.564 C47.153,57.176 46.165,57.176 45.555,56.564 L30.304,41.332 C29.998,41.025 29.845,40.627 29.845,40.227 C29.845,39.827 29.998,39.429 30.302,39.124 C30.910,38.515 31.901,38.515 32.510,39.124 L46.658,53.258 L60.806,39.124 C61.415,38.517 62.406,38.517 63.014,39.124 C63.623,39.734 63.623,40.723 63.014,41.332 L47.763,56.564 Z"/>
 		</svg>
-			</div>
-	</section>
+	</div>
+</section>
 
 
 
@@ -162,13 +162,32 @@
 		</div>
 	</section>
 
-	<section class="works">	
-		<h2>Our work</h2>
-		<div class="line line--black">
-		</div>
-		<div class="works__samples">
-
-		</div>
+	<section class="works">
+		<div class="container">
+			<h2 class="works-title">Our work</h2>
+			<div class="line line--black">
+			</div>
+			<div class="works__samples">
+				<div class="works__samples-img works__samples-img--kinderen">
+					<a href="#" class="works__samples-link ">kinderen planet
+						<img src="img/anchor.svg" alt="anchor" class="works__samples-link-anchor">
+					</a>
+				</div>
+				<div class="works__samples-img works__samples-img--jetindus">
+					<a href="#" class="works__samples-link ">jetindus
+						<img src="img/anchor.svg" alt="anchor" class="works__samples-link-anchor">
+					</a>
+				</div>
+				<div class="works__samples-img works__samples-img--trimplement">
+					<a href="#" class="works__samples-link ">trimplement
+						<img src="img/anchor.svg" alt="anchor" class="works__samples-link-anchor">
+					</a>
+				</div>				
+			</div>
+			<a href="#" class="elegant-btn elegant-btn--more">
+				More
+			</a>
+		</div>	
 	</section>
 </main>
 
