--- a/index.html
+++ b/index.html
@@ -86,9 +86,8 @@
 			<h1 class="banner__text-title">WE'RE CREATIVE AGENCY
 			</h1>
 
-			<div class="line line--white">
-			</div>
-
+			<hr class="line line--white">
+			
 			<p class="banner__text-descript">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur sapiente, provident vitae?</p>
 
 		</div>
@@ -111,7 +110,7 @@
 
 			<h2 class="services-title"> OUR SERVICES</h2>
 
-			<div class="line line--black"></div>
+			<hr class="line line--black">
 
 
 			<ul class="services__list">
@@ -165,8 +164,7 @@
 	<section class="works">
 		<div class="container">
 			<h2 class="works-title">Our work</h2>
-			<div class="line line--black">
-			</div>
+			<hr class="line line--black">
 			<div class="works__samples">
 				<div class="works__samples-img works__samples-img--kinderen">
 					<a href="#" class="works__samples-link ">kinderen planet
@@ -190,6 +188,50 @@
 		</div>	
 	</section>
 </main>
+<footer class="footer">
+	<div class="container">
+		<h2 class="footer__title">
+			get in touch
+		</h2>
+		<hr class="line line--white">
+		<ul class="footer__socialnet">
+			<li class="footer__socialnet-icons">
+				<a href="#" class="footer__socialnet-icons-link footer__socialnet-icons-link--twitter"></a>
+			</li>
+			<li class="footer__socialnet-icons">
+				<a href="#" class="footer__socialnet-icons-link footer__socialnet-icons-link--facebook"></a>
+			</li>
+			<li class="footer__socialnet-icons">
+				<a href="#" class="footer__socialnet-icons-link footer__socialnet-icons-link--linkedin"></a>
+			</li>
+			<li class="footer__socialnet-icons">
+				<a href="#" class="footer__socialnet-icons-link footer__socialnet-icons-link--vimeo"></a>
+			</li>
+			<li class="footer__socialnet-icons">
+				<a href="#" class="footer__socialnet-icons-link footer__socialnet-icons-link--behance"></a>
+			</li>
+		</ul>
+		<form class="footer__form" action="#">
+			<div class="footer__form-block">
+				<input class="footer__form-block-input" type="name" name="Name" placeholder="Name">
+			</div>
+
+			<div class="footer__form-block">
+				<input class="footer__form-block-input" type="email" name="email" placeholder="Email">
+			</div>
+
+			<div class="footer__form-block">
+				<input class="footer__form-block-input" type="text" placeholder="Message">
+			</input>
+		</div>
+
+	</form>
+	<a class="elegant-btn elegant-btn--white">
+		send
+	</a>
+
+</div>
+</footer>
 
 
 <script>
