--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="style/default.css">
 	<link rel="stylesheet" href="style/media.css">
 	<link rel="stylesheet" href="style/elegnat-ui.css">
+	<meta name="viewport" content="width=device-width">
 </head>
 <body>
 
@@ -222,8 +223,9 @@
 			</div>
 
 			<div class="footer__form-block">
+<!-- 				<textarea name="Message" class="footer__form-block-input" cols="30" rows="1">Message</textarea> -->
 				<input class="footer__form-block-input" type="text" placeholder="Message">
-			</input>
+				</input>
 		</div>
 
 	</form>
